--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,28 @@ button:hover {
     background: #d32f2f;
 }
 
+.logo {
+    height: 40px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.menu {
+    margin-top: 20px;
+}
+
+.menu a {
+    color: #ffffff;
+    text-decoration: none;
+    margin: 0 10px;
+    font-weight: bold;
+}
+
+.menu a:hover {
+    text-decoration: underline;
+    color: #eeff00;
+}
+
 .extensiones {
     display: flex;
     flex-wrap: wrap;
